fix: 🐛 z-index issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -79,10 +79,10 @@ section {
 
   .left-card {
     animation: left-to-main 1s ease-in-out forwards;
+    z-index: 1;
   }
 
   .right-card {
-    z-index: -3;
     animation: right-to-left 1s ease-in-out forwards;
   }
 
@@ -96,11 +96,11 @@ section {
 
   .left-card {
     animation: left-to-right 1s ease-in-out forwards;
-    z-index: -3;
   }
 
   .right-card {
     animation: right-to-main 1s ease-in-out forwards;
+    z-index: 1;
   }
 
 }
@@ -136,7 +136,6 @@ section {
     height: 80%;
     top: 10%;
     right: -10%;
-    z-index: -2;
   }
 
 }
@@ -185,7 +184,6 @@ section {
     height: 80%;
     top: 10%;
     left: -10%;
-    z-index: -2;
   }
 
 }
